2015-08-20  Joseph Pecoraro  <pecoraro@apple.com>

        JSContext Inspector: Uncaught Exception opening Search Tab
        https://bugs.webkit.org/show_bug.cgi?id=148284

        Reviewed by Timothy Hatcher.

        * UserInterface/Views/SearchSidebarPanel.js:
        (WebInspector.SearchSidebarPanel):
        This is copied / pasted code that shouldn't apply to the Search tab.
        We want to show results under Resources in the Search tab.

2015-08-20  Nikita Vasilyev  <nvasilyev@apple.com>

        Web Inspector: Truncate data URIs
        https://bugs.webkit.org/show_bug.cgi?id=148212

        Reviewed by Timothy Hatcher.

        * UserInterface/Base/URLUtilities.js:
        (parseURL):
        Exit early to avoid an expensive RegExp match on a potentially very large data URI.

        (parseQueryString):
        Fix typo.

        (WebInspector.displayNameForURL):
        (WebInspector.truncateURL):
        By default, only show first and last 3 characters of data URIs.

        * UserInterface/Models/Resource.js:
        (WebInspector.Resource.prototype.get displayURL):
        For tooltips, show first and last 32 characters of data URIs.

        * UserInterface/Models/SourceCodeLocation.js:
        (WebInspector.SourceCodeLocation.prototype._locationString):
        * UserInterface/Views/ResourceTreeElement.js:
        (WebInspector.ResourceTreeElement.prototype._updateToolTip):

2015-08-20  Devin Rousso  <drousso@apple.com>

        Web Inspector: Add flex alignment section to Visual sidebar
        https://bugs.webkit.org/show_bug.cgi?id=148243

        Reviewed by Timothy Hatcher.

        Uses select keyword pickers to contain the list of possible values.  Also supports
        the upcoming Grid layout keywords in the advanced keyword list.

        * Localizations/en.lproj/localizedStrings.js:
        * UserInterface/Views/VisualStyleDetailsPanel.js:
        (WebInspector.VisualStyleDetailsPanel):