@@ -1,3 +1,14 @@
+2015-08-20  Nikita Vasilyev  <nvasilyev@apple.com>
+
+        Web Inspector: inline errors/warnings are taller than the line height
+        https://bugs.webkit.org/show_bug.cgi?id=148232
+
+        Reviewed by Timothy Hatcher.
+
+        * UserInterface/Views/SourceCodeTextEditor.css:
+        (.source-code.text-editor > .CodeMirror .issue-widget.inline):
+        (.source-code.text-editor > .CodeMirror .issue-widget.inline > .text):
+
 2015-08-20  Joseph Pecoraro  <pecoraro@apple.com>
 
         JSContext Inspector: Uncaught Exception opening Search Tab
